# consenzero

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: prove.yml
consensus/: Cargo.toml
consensus/beacon-state/src/: beacon_state.rs
consensus/common/src/: bls.rs  deposit.rs  execution_payload.rs  execution_payload_header.rs  fork.rs  kzg.rs  sync_committee.rs  validator.rs
consensus/src/: beacon_block.rs  beacon_block_body.rs  beacon_block_header.rs  beacon_state.rs  bls.rs  eth_1_data.rs  fork.rs  lib.rs  merkleized_validator.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
