[package]
name = "consensus_stf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
consensus = { path = "../../consensus" }
ream-consensus = { git = "git@github.com:unnawut/ream.git", branch = "ssz_rs", package = "ream-consensus" }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" } # Add ethereum_hashing::Sha256Context that's failing tree_hash crate used by ream
