[package]
name = "consensus_stf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
alloy-primitives = "0.8"
consensus-common = { path = "../../consensus/common" }
ream-consensus = { git = "https://github.com/ReamLabs/ream.git", package = "ream-consensus" }
risc0-zkvm = { version = "2.0.1", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
# ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs.git", package = "ssz_rs" }
ssz_rs = { git = "https://github.com/unnawut/ssz-rs.git", branch = "partial_merkle_tree", package = "ssz_rs" } # Efficient merkle tree
ssz_rs_derive = { git = "https://github.com/ralexstokes/ssz-rs.git", package = "ssz_rs_derive" }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" } # Add ethereum_hashing::Sha256Context that's failing tree_hash crate used by ream
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }

#[patch.'https://github.com/zkcrypto/bls12_381']
#bls12_381 = { git = "https://github.com/risc0/zkcrypto-bls12_381", tag = "bls12_381/v0.8.0-risczero.1" }
